--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>My Generics</title>
-</head>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>My Generics</title>
+  </head>
 
-<body>
-  <div id="root"></div>
-  <div id="popups"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <div id="popups"></div>
+  </body>
 </html>
